data/resources/style_gtk.css
/*
** main_window
*/

button.new-document-menu-button {
    padding-left: 8px;
    padding-right: 8px;
}
scrollbar.hidden slider {
    opacity: 0;
}
headerbar > windowhandle > box {
    padding: 0px;
}
headerbar box.start, headerbar box.end {
    padding: 6px;
}

/*
** welcome-screen
*/

box.welcome {
    padding-top: 75px;
    padding-bottom: 75px;
    margin-left: 150px;
    margin-right: 150px;
    margin-bottom: 150px;
    background: radial-gradient(@window_bg_color 10%, @window_bg_color 30%, transparent 50%) -75px 0px, radial-gradient(@window_bg_color 10%, @window_bg_color 30%, transparent 50%) 75px 0px;
}
label.welcome-header {
    font-size: 32pt;
    padding-bottom: 18px;
    font-weight: 200;
}
label.welcome-description {
}
headerbar.welcome {
}

/*
** open documents
*/

popover.documentchooser > box {
    margin: 9px;
}
popover.documentchooser entry {
    margin-bottom: 6px;
}
popover.documentchooser scrolledwindow {
    margin-bottom: 12px;
}
popover.documentchooser box.not_found {
    margin-bottom: 12px;
}
popover.documentchooser box.not_found image {
    opacity: 0.5;
}
popover.documentchooser box.not_found label {
    opacity: 0.65;
}

/* 
** tab switching
*/

.open-docs-popover-button {
    margin: 0px;
    padding: 0px;
}
.open-docs-popover-button > button {
    margin: 0px;
    padding-left: 8px;
    padding-right: 18px;
    border-radius: 0px;
    box-shadow: none;
    font-weight: normal;
    border-left: 1px solid transparent;
    border-right: 1px solid transparent;
}
.open-docs-popover-button > button:hover:not(:checked):not(:active) {
    border-left: 1px solid @borders;
    border-right: 1px solid @borders;
}
.open-docs-popover-button > button:checked, .open-docs-popover-button > button:active {
    border-left: 1px solid @borders;
    border-right: 1px solid @borders;
}
.open-docs-popover list,
.open-docs-popover row:not(:hover):not(:selected) {
    background-color: @view_bg_color;
}
.open-docs-popover row:hover:not(:active):not(:selected) {
    background-color: @view_hover_color;
}
.open-docs-popover scrollbar slider {
    min-height: 12px;
}
.open-docs-popover row {
    border-radius: 6px;
    padding: 5px 5px 5px 8px;
    color: @view_fg_color;
}
.open-docs-popover list {
    padding: 0px;
    margin: 0px;
}
.open-docs-popover list button {
    padding: 0px 0px;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 12px;
    opacity: 0.5;
    border-style: none;
    border-width: 0px;
    box-shadow: none;
    outline: none;
}
.open-docs-popover list button:hover:not(:backdrop) {
    background-image: none;
    opacity: 1;
    border-style: none;
    border-width: 0px;
}
.open-docs-popover label.root-label {
    color: @description_color;
}
button.like-model {
    border-width: 0px;
    box-shadow: none;
    padding: 1px 5px 1px 5px;
    margin: 0px;
    background: transparent;
    outline: none;
}
button.like-model:hover {
    background: @view_bg_color;
    transition: none;
}
.open-docs-popover list .icon {
    padding-top: 3px;
    padding-bottom: 3px;
}
.open-docs-popover list.selection-mode .radio-hover {
    padding-top: 3px;
    padding-bottom: 3px;
    opacity: 0;
}
.open-docs-popover list.selection-mode row:hover .radio-hover {
    opacity: 1;
}

/*
** build widget
*/

box.build-widget button {
    margin-left: 6px;
}
box.build-widget label.build-timer {
    padding: 6px 12px;
    border: 0px solid @borders;
    border-right-width: 0px;
}

/*
** build log
*/

box.buildlog > box {
    background: @view_bg_color;
}
box.buildlog > box label {
    padding-left: 12px;
}
box.buildlog > box button {
    margin: 6px;
}

/*
** popover menus
*/

popover arrow {
    background: @window_bg_color;
}
popover contents {
    background: @window_bg_color;
}
popover button.action, popover button.menu, popover button.header {
    background: none;
    font-weight: normal;
}
popover button.action:hover, popover button.menu:hover, popover button.header:hover {
    background: @view_hover_color;
}
popover button.action:active, popover button.action:focus, popover button.menu:active, popover button.menu:focus, popover button.header:active, popover button.header:focus {
    background: @borders;
}
popover button label.shortcut {
    color: @menu_shortcut_color;
    margin-left: 18px;
}
popover button image.icon {
    padding-top: 2px;
    padding-right: 8px;
}
popover separator {
    margin: 6px 0px;
}
popover label.explaination {
    margin: 0px 10px;
    color: @description_color;
    font-size: 13px;
}
popover label.explaination-header {
    margin: 0px 10px;
    font-weight: bold;
}

/*
** sidebar
*/

.sidebar {
    background-color: @view_bg_color;
}
.sidebar box.tabs-box {
    background-color: @view_bg_color;
    border-bottom: 1px solid @lighter_border;
    padding-bottom: 0px;
}
.sidebar box.tabs-box.no-border {
    border-bottom-width: 0px;
    padding-bottom: 1px;
}
.sidebar box.tabs-box > label {
    padding: 9px 8px 8px 9px;
    background-color: @view_bg_color;
}
.sidebar box.tabs-box button {
    margin: 0px;
    padding: 6px;
    border-width: 0px;
    border-radius: 0px;
    box-shadow: none;
}
box.sidebar-symbols {
    background-color: @view_bg_color;
}
box.sidebar-symbols label {
    padding: 9px 8px 8px 9px;
    background-color: @view_bg_color;
    border-bottom: 1px solid @lighter_border;
}
box.sidebar-symbols label.overlay {
    border-bottom-width: 0px;
}
box.sidebar-symbols flowbox {
    background-color: @view_bg_color;
    padding-bottom: 36px;
}
box.sidebar-symbols flowbox flowboxchild {
    padding: 0px;
}
box.sidebar-symbols flowbox flowboxchild image {
    color: @view_fg_color;
    background-color: @view_bg_color;
    border-bottom: 1px solid @lighter_border;
    border-right: 1px solid @lighter_border;
    margin: 0px;
    padding: 5px;
}
box.sidebar-symbols flowbox flowboxchild image.no_right_border {
    border-right: 1px solid transparent;
}
box.sidebar-symbols box.search_bar {
    padding-left: 6px;
    padding-right: 6px;
}
/* ... */

